# WebGame

./: .gitignore  CMakeLists.txt  README.md  main.cpp  todo.md  使用说明.md  网络模块.md
doc/: player_serialization.md  模块设计.md
lib/: LogM.h
proto/: player.proto
scripts/: bench_battle.sh  bench_battle_flow.sh  postgres_init.sql  profile_quick.sh  run_bench_matrix.sh  run_remote_bench_matrix.sh  run_server.sh  summarize_battle_flow.py
src/client/: app.js  client.md  index.html  load.sh  styles.css
src/core/Character/: Character.cpp  Character.h
src/core/battle/: BattleAttr.cpp  BattleCharacter.cpp  BattleCharacter.h  BattleManager.cpp
src/core/battle/header/: BattleAttr.h  BattleManager.h  BattleTypes.h
src/core/item/: Item.h  ItemConfig.cpp  ItemConfig.h  ItemTypes.h  ModuleDesign.md  equip.h  item.h
src/core/player/: Player.cpp  Player.h
src/core/skill/: Skill.h  SkillEffect.cpp  SkillEffect.h
src/data/: config.json  item_samples.json
src/data/code/: CharacterConfig.cpp  CharacterConfig.h  ItemConfig.cpp  ItemConfig.h  SkillConfig.cpp  SkillConfig.h  item.h
src/data/config/: app.js  characters.json  index.html  skills.json  styles.css
src/game/: game.md
src/game/player/: Inventory.cpp  Inventory.h  Player.cpp  Player.h
src/game/shop/: ShopService.cpp  ShopService.h  ShopTypes.h
src/network/: ClientContext.h  ConnectProc.h  EventLoop.cpp  EventLoop.h  EventLoopGroup.cpp  EventLoopGroup.h  HttpCodec.cpp  HttpCodec.h  LoginAcceptor.cpp  LoginAcceptor.h  MessageCodec.cpp  MessageCodec.h  NetBootstrap.cpp  NetBootstrap.h  NetConfig.cpp  NetConfig.h  NetDiag.h  NetworkModule.cpp  NetworkModule.h  ProtocolDispatcher.cpp  ProtocolDispatcher.h  README.md  SessionManager.h  TcpConnection.cpp  TcpConnection.h
src/network/core/: HeartbeatManager.h  NetConfig.h  NetworkModule.cpp
src/network/protocol/: HttpCodec.cpp  ProtocolDispatcher.cpp
src/network/session/: ClientContext.h  SessionManager.cpp
src/network/transport/: LoginAcceptor.cpp  LoginAcceptor.h  NetBootstrap.cpp  TcpConnection.cpp  TcpConnection.h
src/server/: AuthService.cpp  AuthService.h  ProfileStore.cpp  ProfileStore.h  server.md
test/: CMakeLists.txt  PlayerSerializationTest.cpp  ShopSmokeTest.cpp
test/benchmarks/battle_flow/: aggregate_summary.json  aggregate_summary.txt
test/benchmarks/battle_flow/battle_flow_bench_20260306_211119/: raw_metrics.tsv  summary.json  summary.txt
test/benchmarks/battle_flow/battle_flow_bench_20260306_211119/tmp/: metric_1.tsv  metric_10.tsv  metric_11.tsv  metric_12.tsv  metric_13.tsv  metric_14.tsv  metric_15.tsv  metric_16.tsv  metric_17.tsv  metric_18.tsv  metric_19.tsv  metric_2.tsv  metric_20.tsv  metric_3.tsv  metric_4.tsv  metric_5.tsv  metric_6.tsv  metric_7.tsv  metric_8.tsv  metric_9.tsv
test/benchmarks/battle_flow/battle_flow_bench_20260306_211123/: raw_metrics.tsv  summary.json  summary.txt
test/benchmarks/battle_flow/battle_flow_bench_20260306_211123/tmp/: metric_1.tsv  metric_10.tsv  metric_11.tsv  metric_12.tsv  metric_13.tsv  metric_14.tsv  metric_15.tsv  metric_16.tsv  metric_17.tsv  metric_18.tsv  metric_19.tsv  metric_2.tsv  metric_20.tsv  metric_21.tsv  metric_22.tsv  metric_23.tsv  metric_24.tsv  metric_25.tsv  metric_26.tsv  metric_27.tsv  metric_28.tsv  metric_29.tsv  metric_3.tsv  metric_30.tsv  metric_31.tsv  metric_32.tsv  metric_33.tsv  metric_34.tsv  metric_35.tsv  metric_36.tsv  metric_37.tsv  metric_38.tsv  metric_39.tsv  metric_4.tsv  metric_40.tsv  metric_5.tsv  metric_6.tsv  metric_7.tsv  metric_8.tsv  metric_9.tsv
test/benchmarks/battle_flow/matrix_20260306_211119/: matrix_raw.tsv  matrix_summary.json  matrix_summary.txt
web/config-editor/: app.js  index.html  styles.css
